@@ -14,6 +14,8 @@ $Id$
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Stop a failed initialization of a viewport causing access violations.
+
 * [DanielPharos]: Fix for the long-standing bug where float-specifics were not working
           - in Wine, and on non-Latin-alphabet Windows (for example, Chinese Windows).
 
